# SKIRT8

./: .gitattributes  .gitignore  CMakeLists.txt  README.txt  downloadextdat.sh
Docs/doxygen/: LegalInfo.txt  html.doxygen  index_root.html
FitSKIRT/: CMakeLists.txt
FitSKIRT/convolution/: CMakeLists.txt  Factorize.cpp  Factorize.hpp  FftConvolution.cpp  FftConvolution.hpp  WorkSpace.cpp  WorkSpace.hpp
FitSKIRT/core/: AdjustableSkirtSimulation.cpp  AdjustableSkirtSimulation.hpp  CMakeLists.txt  Convolution.cpp  Convolution.hpp  ConvolutionKernel.cpp  ConvolutionKernel.hpp  FitScheme.cpp  FitScheme.hpp  FitSchemeItemRegistry.cpp  FitSchemeItemRegistry.hpp  FitsKernel.cpp  FitsKernel.hpp  GaussianKernel.cpp  GaussianKernel.hpp  Image.cpp  Image.hpp  LumFit1.cpp  LumFit1.hpp  LumFit2.cpp  LumFit2.hpp  LumFitN.cpp  LumFitN.hpp  MasterSlaveCommunicator.cpp  MasterSlaveCommunicator.hpp  OligoFitScheme.cpp  OligoFitScheme.hpp  Optimization.cpp  Optimization.hpp  ParameterRange.cpp  ParameterRange.hpp  ParameterRanges.hpp  ReferenceImage.cpp  ReferenceImage.hpp  ReferenceImages.cpp  ReferenceImages.hpp  SerializedData.cpp  SerializedData.hpp
FitSKIRT/galib/: CMakeLists.txt  GA1DArrayGenome.h  GA1DBinStrGenome.cpp  GA1DBinStrGenome.h  GA2DArrayGenome.h  GA2DBinStrGenome.cpp  GA2DBinStrGenome.h  GA3DArrayGenome.h  GA3DBinStrGenome.cpp  GA3DBinStrGenome.h  GAAllele.h  GABaseGA.cpp  GABaseGA.h  GABin2DecGenome.cpp  GABin2DecGenome.h  GABinStr.cpp  GABinStr.h  GADCrowdingGA.h  GADemeGA.cpp  GADemeGA.h  GAGenome.cpp  GAGenome.h  GAIncGA.cpp  GAIncGA.h  GAList.h  GAListBASE.cpp  GAListBASE.h  GAListGenome.h  GANode.h  GAParameter.cpp  GAParameter.h  GAPopulation.cpp  GAPopulation.h  GARealGenome.h  GASStateGA.cpp  GASStateGA.h  GAScaling.cpp  GAScaling.h  GASelector.cpp  GASelector.h  (+18 more)
FitSKIRT/main/: CMakeLists.txt  FitSkirtCommandLineHandler.cpp  FitSkirtCommandLineHandler.hpp  FitSkirtMain.cpp
SKIRT/core/: AdaptiveMesh.cpp  AdaptiveMesh.hpp  AdaptiveMeshAmrvacFile.cpp  AdaptiveMeshAmrvacFile.hpp  AdaptiveMeshAsciiFile.cpp  AdaptiveMeshAsciiFile.hpp  AdaptiveMeshDustDistribution.cpp  AdaptiveMeshDustDistribution.hpp  AdaptiveMeshDustGrid.cpp  AdaptiveMeshDustGrid.hpp  AdaptiveMeshFile.hpp  AdaptiveMeshGeometry.cpp  AdaptiveMeshGeometry.hpp  AdaptiveMeshInterface.hpp  AdaptiveMeshNode.cpp  AdaptiveMeshNode.hpp  AdaptiveMeshStellarComp.cpp  AdaptiveMeshStellarComp.hpp  AllCellsDustLib.cpp  AllCellsDustLib.hpp  AllSkyInstrument.cpp  AllSkyInstrument.hpp  AmHydrocarbonGrainComposition.cpp  AmHydrocarbonGrainComposition.hpp  AngularDistribution.hpp  BaryBinTreeNode.cpp  BaryBinTreeNode.hpp  BaryOctTreeNode.cpp  BaryOctTreeNode.hpp  Benchmark1DDustMix.cpp  Benchmark1DDustMix.hpp  Benchmark2DDustMix.cpp  Benchmark2DDustMix.hpp  BinTreeDustGrid.cpp  BinTreeDustGrid.hpp  BinTreeNode.cpp  BinTreeNode.hpp  BlackBodySED.cpp  BlackBodySED.hpp  BolLuminosityStellarCompNormalization.cpp  (+365 more)
SKIRT/main/: SkirtCommandLineHandler.cpp  SkirtMain.cpp
SKIRT/mpi/: ProcessManager.cpp
SKIRT/utils/: Box.hpp  HomogeneousTransform.cpp  HomogeneousTransform.hpp
SMILE/wizard/: MainWindow.cpp
